--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,20 @@
 services:
+
+  backend:
+    build: ./
+    container_name: backend-service
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_NAME=movie_db
+      - DB_USER=root
+      - DB_PASSWORD=root
+    depends_on:
+      - db
+
+
   db:
     image: mysql:8.0
     container_name: mysql
@@ -8,6 +24,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./src/main/docker/initdb.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - my_network
 
@@ -17,10 +34,11 @@ services:
     image: phpmyadmin/phpmyadmin
     restart: always
     ports:
-      - 8088:80
+      - "8088:80"
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: root
+
     networks:
       - my_network
 
